# nsr-ssh

./: Cargo.toml  LICENSE  README.md  install.sh
assets/: nsr-ssh.desktop
crates/nsr-core/: Cargo.toml
crates/nsr-core/src/: events.rs  lib.rs  session.rs
crates/nsr-plugin/: Cargo.toml
crates/nsr-plugin/src/: api.rs  lib.rs
crates/nsr-ssh/: Cargo.toml
crates/nsr-ssh/src/: main.rs
crates/nsr-theme/: Cargo.toml
crates/nsr-theme/src/: builtin.rs  lib.rs  theme.rs
crates/nsr-ui/: Cargo.toml
crates/nsr-ui/src/: app.rs  connect_dialog.rs  design.rs  lib.rs  pane.rs  settings.rs  tab_bar.rs  terminal_widget.rs  updater.rs  vault_panel.rs
crates/nsr-vault/: Cargo.toml
crates/nsr-vault/src/: export.rs  host.rs  lib.rs  store.rs
