[workspace]
resolver = "2"
members = [
    "crates/nsr-ssh",
    "crates/nsr-core",
    "crates/nsr-vault",
    "crates/nsr-ui",
    "crates/nsr-theme",
    "crates/nsr-plugin",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
russh = "0.60"
eframe = { version = "0.34", features = ["wayland"] }
egui = "0.34"
vt100 = "0.16"
ssh2-config = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
async-trait = "0.1"
shellexpand = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
