[package]
name = "nsr-core"
version = "0.1.1"
edition = "2021"

[dependencies]
nsr-vault = { path = "../nsr-vault" }
tokio = { workspace = true }
russh.workspace = true
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
shellexpand = { workspace = true }
