[package]
name = "nsr-ssh"
version = "0.1.1"
edition = "2021"

[dependencies]
nsr-ui = { path = "../nsr-ui" }
nsr-core = { path = "../nsr-core" }
eframe = { workspace = true }
egui = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
